--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
     <link rel="icon" type="image/png" href="Assets/logo.png">
     <!-- SCRIPTS -->
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <!-- MAIL -->
+    <meta name="yandex-verification" content="f86171133514f762" />
     <!-- GOOGLE ANALYTICS -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7W2S8VV31F"></script>
     <script>
