--- a/index.html
+++ b/index.html
@@ -154,6 +154,12 @@
                     Suggest an Idea
                 </button>
             </form>
+            <form action="https://www.binance.com/en/trade/DOGE_USDT" target="_blank">
+                <button class="btn btn-info homebutton">
+                    <i class="bi bi-cash-stack"></i>
+                    Buy DogeCoins
+                </button>
+            </form>
         </div>
     </div>
     <!-- SCRIPTS START -->
