--- a/prightside.html
+++ b/prightside.html
@@ -90,8 +90,8 @@
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a href="phypotenuse.html" class="dropdown-item aactive"><i class="bi bi-symmetry-vertical"></i> Hypotenuse</a>
-                        <a href="prightside.html" class="dropdown-item"><i class="bi bi-symmetry-vertical"></i> Right side</a>
+                        <a href="phypotenuse.html" class="dropdown-item"><i class="bi bi-symmetry-vertical"></i> Hypotenuse</a>
+                        <a href="prightside.html" class="dropdown-item aactive"><i class="bi bi-symmetry-vertical"></i> Right side</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
