--- a/404.html
+++ b/404.html
@@ -32,10 +32,10 @@
     <link rel="icon" type="image/png" href="../Assets/logo.png">
     <style>
         .error {
-            display: inline-flex; /* keep the background color wrapped tight */
+            display: inline-flex; 
             padding: 5px;
             border-radius: 5px;
-            background-color: #DC3545;
+            background-color: var(--danger);
         }
     </style>
     <!-- SCRIPTS -->
@@ -151,7 +151,7 @@
             <form action="index.html">
                 <button class="btn btn-primary homebutton btn-lg">
                     <i class="bi bi-house"></i>
-                    Home Page
+                    Got to the Home Page
                 </button>
             </form>
         </div>
