--- a/404.html
+++ b/404.html
@@ -151,7 +151,7 @@
             <form action="index.html">
                 <button class="btn btn-primary homebutton btn-lg">
                     <i class="bi bi-house"></i>
-                    Got to the Home Page
+                    Go to the Home Page
                 </button>
             </form>
         </div>
