--- a/404.html
+++ b/404.html
@@ -146,7 +146,7 @@
         <div>
             <h2 class="text-white error">Error 404</h2>
         </div>
-        <h4 class="text-white">it seems that the page <span id="url"></span> does not exist on this server...</h4>
+        <h4 class="text-white">it seems that the page <i id="url"></i> does not exist on this server...</h4>
         <div class="inline-flex">
             <form action="index.html">
                 <button class="btn btn-primary homebutton btn-lg">
