--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <form action="https://www.binance.com/en/trade/DOGE_USDT" target="_blank">
                 <button class="btn btn-info homebutton">
                     <i class="bi bi-cash-stack"></i>
-                    Buy DogeCoins
+                    Buy DogeCoin
                 </button>
             </form>
         </div>
