--- a/acircle.html
+++ b/acircle.html
@@ -7,6 +7,7 @@
     <title>Liquid Geometry - Circle</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noodp" />
+    <meta name="title" content="Liquid Geometry">
     <meta name="description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="author" content="Liquid Inc." />
     <meta name="og:url" content="https://www.liquidgeometry.tk" />
