--- a/tos.html
+++ b/tos.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noodp" />
     <meta name="description" content="Terms of Service(ToS) Liquid Geometry" />
+    <meta name="title" content="Liquid Geometry">
     <meta name="author" content="Liquid Inc." />
     <meta name="og:url" content="https://www.liquidgeometry.tk/tos" />
     <meta name="og:title" content="Liquid Geometry Terms of Service" />
