--- a/clenght.html
+++ b/clenght.html
@@ -8,16 +8,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noodp" />
     <meta name="description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
-    <meta name="title" content="Liquid Geometry">
+    <meta name="title" content="Liquid Geometry - Length Converter">
     <meta name="author" content="Liquid Inc." />
-    <meta name="og:url" content="https://www.liquidgeometry.tk" />
+    <meta name="og:url" content="https://www.liquidgeometry.tk/clenght" />
     <meta name="og:title" content="Liquid Geometry" />
     <meta name="og:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:locale" content="website" />
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Liquid Geometry" />
+    <meta name="twitter:title" content="Liquid Geometry - Length Converter" />
     <meta name="twitter:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <!-- OAuth -->
     <meta name="google-signin-client_id" content="574643928295-tftr9maiaoejhtngs28jhdga6v3eueah.apps.googleusercontent.com">
