--- a/apara.html
+++ b/apara.html
@@ -7,17 +7,17 @@
     <title>Liquid Geometry - Parallelogram</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noodp" />
-    <meta name="title" content="Liquid Geometry">
+    <meta name="title" content="Liquid Geometry - Parallelogram">
     <meta name="description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="author" content="Liquid Inc." />
-    <meta name="og:url" content="https://www.liquidgeometry.tk" />
-    <meta name="og:title" content="Liquid Geometry" />
+    <meta name="og:url" content="https://www.liquidgeometry.tk/apara" />
+    <meta name="og:title" content="Liquid Geometry - Parallelogram" />
     <meta name="og:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
     <meta name="og:locale" content="website" />
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Liquid Geometry" />
+    <meta name="twitter:title" content="Liquid Geometry - Parallelogram" />
     <meta name="twitter:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <!-- OAuth -->
     <meta name="google-signin-client_id" content="574643928295-tftr9maiaoejhtngs28jhdga6v3eueah.apps.googleusercontent.com">
