--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Liquid Geometry - Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="Liquid Geometry">
+    <meta name="keywords" content="liquidgeometry,liquid geometry,geometry,mathematics,algebra,unit converter,converter,calculator,area calculator,shapes,pyhtagoras,pythagorian theorem,theorem">
     <meta name="description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="author" content="Liquid Inc." />
     <meta name="og:url" content="https://www.liquidgeometry.tk" />
