--- a/apara.html
+++ b/apara.html
@@ -150,7 +150,7 @@
         <br />
         <p class="text-success " id="output"></p>
         <br />
-        <div>
+        <div class="formula">
             <b class="text-white show-formula"><u>show formula</u></b>
             <p id="formula" class="text-white">
                 multiply the parallelogram's height with its width
