--- a/asquare.html
+++ b/asquare.html
@@ -145,7 +145,7 @@
         <br />
         <p class="text-success " id="output"></p>
         <br />
-        <div>
+        <div class="formula">
             <b class="text-white show-formula"><u>show formula</u></b>
             <p id="formula" class="text-white">
                 put the square's side in the power of 2
