--- a/atrapezoid.html
+++ b/atrapezoid.html
@@ -155,7 +155,7 @@
         <br />
         <p class="text-success " id="output"></p>
         <br />
-        <div>
+        <div class="formula">
             <b class="text-white show-formula"><u>show formula</u></b>
             <p id="formula" class="text-white">
                 add up the small side with the large side, multiply that with the height and then divide that by 2
