added version badge and changed the navbar css

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Liquid Geometry</a>
+        <a class="navbar-brand" href="#">Liquid Geometry <span class="badge badge-success" style="font-size: small; font-weight: 300;">v3.1.2</span></a> <!-- Specify the version only in the index page -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -134,7 +134,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="dead-center">
-            <h1 class="text-white title">Liquid Geometry</h1>
+        <h1 class="text-white title">Liquid Geometry</h1>
         <h3 class="text-danger">the go-to site for geometry and algebra</h3>
         <div class="inline-flex">
             <form action="https://github.com/liquid-geometry" target="_blank">
