--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Liquid Geometry <span class="badge badge-success" style="font-size: small; font-weight: 300;">v3.1.2</span></a> <!-- Specify the version only in the index page -->
+        <a class="navbar-brand" href="#">Liquid Geometry <span class="badge badge-success" style="font-size: small; font-weight: 300;">v<span id="latest"></span></span></a> <!-- Specify the version only in the index page -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -169,6 +169,7 @@
     <script src="OAuth/SignIn.js"></script>
     <script src="OAuth/SignOut.js"></script>
     <script src="OAuth/OnSignOut.js"></script>
+    <script src="js/release.js"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <!-- SCRIPT END -->
 </body>
