--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Liquid Geometry <span class="badge badge-success" style="font-size: small; font-weight: 300;">v<span id="latest"></span></span></a> <!-- Specify the version only in the index page -->
+        <a class="navbar-brand" href="#">Liquid Geometry <span class="badge badge-success" style="font-size: small; font-weight: 300;" id="latest"></span></a> <!-- Specify the version only in the index page -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
