--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Liquid Geometry <span class="badge badge-success" style="font-size: small; font-weight: 300;" id="latest"></span></a> <!-- Specify the version only in the index page -->
+        <a class="navbar-brand" href="#">Liquid Geometry <span class="badge badge-success" style="font-size: small; font-weight: 300;" id="latest"></span></a> <!-- leave this as it is -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -170,7 +170,8 @@
     <script src="OAuth/SignOut.js"></script>
     <script src="OAuth/OnSignOut.js"></script>
     <script src="js/release.js"></script>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
+    <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>s
     <!-- SCRIPT END -->
 </body>
 </html>
