--- a/404.html
+++ b/404.html
@@ -170,7 +170,7 @@
             console.error('the page ' + window.location.pathname + ' does not exists. It may have been moved, edited or deleted.')
         });
     </script>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
 </html>
