--- a/index.html
+++ b/index.html
@@ -170,8 +170,7 @@
     <script src="OAuth/SignOut.js"></script>
     <script src="OAuth/OnSignOut.js"></script>
     <script src="js/release.js"></script>
-    <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
-    <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>s
+    <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
 </html>
