--- a/cspeed.html
+++ b/cspeed.html
@@ -158,7 +158,7 @@
     <script src="OAuth/SignOut.js"></script>
     <script src="OAuth/OnSignOut.js"></script>
     <script src="js/cspeed.js"></script>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
 </html>
