--- a/formulas.html
+++ b/formulas.html
@@ -11,7 +11,7 @@
     <meta name="title" content="Liquid Geometry - Formulas">
     <meta name="author" content="Liquid Inc." />
     <meta name="og:url" content="https://www.liquidgeometry.tk/formulas" />
-    <meta name="og:title" content="Liquid Geometry" />
+    <meta name="og:title" content="Liquid Geometry - Formulas" />
     <meta name="og:description" content="The go-to site for geometry and mathematics. Area calculator, Pythagorean theorem solver, unit converter and many more!" />
     <meta name="og:image" content="Assets/logo.png" />
     <meta name="og:locale" content="en_US" />
@@ -133,6 +133,7 @@
     <!-- NAVBAR END -->
     <div class="center table-margin">
         <h1 class="text-white title">Liquid Formulas</h1>
+        <section id="trigonometry">
         <h3 class="text-white">Τrigonometric Νumbers</h3>
         <table class="table table-bordered text-white formulas">
             <thead class="bg-success">
@@ -170,6 +171,7 @@
                 </tr>
             </tbody>
         </table>
+        </section>
         <h4 class="text-primary">more coming soon</h4>
     </div>
     <!-- SCRIPTS START -->
