--- a/phypotenuse.html
+++ b/phypotenuse.html
@@ -78,7 +78,7 @@
                         <i class="bi bi-caret-down-fill"></i>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a href="atriangle.html" class="dropdown-item aactive"><i class="bi bi-triangle"></i> Triangle</a>
+                        <a href="atriangle.html" class="dropdown-item"><i class="bi bi-triangle"></i> Triangle</a>
                         <a href="acircle.html" class="dropdown-item"><i class="bi bi-circle"></i> Circle</a>
                         <a href="apara.html" class="dropdown-item"><i class="bi bi-file"></i> Parallelogram</a>
                         <a href="asquare.html" class="dropdown-item"><i class="bi bi-square"></i> Square</a>
