--- a/404.html
+++ b/404.html
@@ -60,7 +60,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="index.html"><i class="bi bi-house"></i> Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown">
@@ -149,7 +149,7 @@
         <h4 class="text-white">it seems that the page <i id="url"></i> does not exist on this server...</h4>
         <div class="inline-flex">
             <form action="index.html">
-                <button class="btn btn-primary homebutton btn-lg">
+                <button class="btn btn-primary homebutton">
                     <i class="bi bi-house"></i>
                     Go to the Home Page
                 </button>
