--- a/atrapezoid.html
+++ b/atrapezoid.html
@@ -134,19 +134,19 @@
     <div class="center">
         <h1 class="text-white title">Liquid Trapezoid</h1>
         <hr class="bg-danger" style="width: 60%;" />
-        <h4 class="text-white">Enter the trapezoid's small side</h4>
+        <h4 class="text-white">Enter the trapezoid's small base</h4>
         <div class="center-form">
-            <input type="number" id="sside" name="side" class="form-control mb-0" value="1" step="0.01" min="0" />
+            <input type="number" id="sside" placeholder="base" name="side" class="form-control mb-0" value="1" step="0.01" min="0" />
         </div>
         <br />
-        <h4 class="text-white">Enter the trapezoid's large side</h4>
+        <h4 class="text-white">Enter the trapezoid's large base</h4>
         <div class="center-form">
-            <input type="number" id="lside" name="side" class="form-control mb-0" value="1" step="0.01" min="0" />
+            <input type="number" id="lside" placeholder="base" name="side" class="form-control mb-0" value="1" step="0.01" min="0" />
         </div>
         <br />
         <h4 class="text-white">Enter the trapezoid's height</h4>
         <div class="center-form">
-            <input type="number" id="height" name="side" class="form-control mb-0" value="1" step="0.01" min="0" />
+            <input type="number" id="height" placeholder="height" name="side" class="form-control mb-0" value="1" step="0.01" min="0" />
         </div>
         <br />
         <div class="center-form">
