--- a/atriangle.html
+++ b/atriangle.html
@@ -134,14 +134,14 @@
     <div class="center">
         <h1 class="text-white title">Liquid Tringle</h1>
         <hr class="bg-danger" style="width: 60%;" />
-        <h4 class="text-white">Enter the triangle's first side</h4>
+        <h4 class="text-white">Enter the triangle's base</h4>
         <div class="center-form">
-            <input type="number" id="fside" name="side" class="form-control mb-0" value="1" step="0.01" min="0" />
+            <input type="number" id="fside" placeholder="base" name="side" class="form-control mb-0" value="1" step="0.01" min="0" />
         </div>
         <br />
         <h4 class="text-white">Enter the triangle's height</h4>
         <div class="center-form">
-            <input type="number" id="height" name="side" class="form-control mb-0" value="1" step="0.01" min="0" />
+            <input type="number" id="height" placeholder="height" name="side" class="form-control mb-0" value="1" step="0.01" min="0" />
         </div>
         <br />
         <div class="center-form">
