--- a/phypotenuse.html
+++ b/phypotenuse.html
@@ -134,14 +134,14 @@
     <div class="center">
         <h1 class="text-white title">Liquid Hypotenuse</h1>
         <hr class="bg-danger" style="width: 60%;" />
-        <h4 class="text-white">Enter the triangle's first right side</h4>
+        <h4 class="text-white">Enter the right triangle's first leg</h4>
         <div class="center-form">
-            <input type="number" id="fside" name="side" class="form-control mb-0" value="1" step="0.01" min="0" />
+            <input type="number" id="fside" placeholder="first leg" name="side" class="form-control mb-0" value="1" step="0.01" min="0" />
         </div>
         <br />
-        <h4 class="text-white">Enter the triangle's second right side</h4>
+        <h4 class="text-white">Enter the right triangle's second leg</h4>
         <div class="center-form">
-            <input type="number" id="sside" name="side" class="form-control mb-0" value="1" step="0.01" min="0" />
+            <input type="number" id="sside" placeholder="second leg" name="side" class="form-control mb-0" value="1" step="0.01" min="0" />
         </div>
         <br />
         <div class="center-form">
@@ -153,7 +153,7 @@
         <div>
             <b class="text-white show-formula"><u>show formula</u></b>
             <p id="formula" class="text-white">
-                put the 2 right sides in the power of twom then add them up. After that find the square root of the result.
+                hypotenuse^2 = (first leg)^2 + (other leg)^2
             </p>
         </div>
     </div>
