--- a/acircle.html
+++ b/acircle.html
@@ -136,7 +136,7 @@
         <hr class="bg-danger" style="width: 60%;" />
         <h4 class="text-white">Enter the circle's radius</h4>
         <div class="center-form">
-            <input type="number" id="radius" placeholder="radius" name="side" class="form-control mb-0" value="1" step="0.01" min="0" />
+            <input type="number" id="radius" placeholder="radius" name="side" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br />
         <div class="center-form">
