--- a/apara.html
+++ b/apara.html
@@ -136,12 +136,12 @@
         <hr class="bg-danger" style="width: 60%;" />
         <h4 class="text-white">Enter the parallelogram's width</h4>
         <div class="center-form">
-            <input type="number" id="width" placeholder="width" name="side" class="form-control mb-0" value="1" step="0.01" min="0" />
+            <input type="number" id="width" placeholder="width" name="side" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br />
         <h4 class="text-white">Enter the parallelogram's height</h4>
         <div class="center-form">
-            <input type="number" id="height" placeholder="height" name="side" class="form-control mb-0" value="1" step="0.01" min="0" />
+            <input type="number" id="height" placeholder="height" name="side" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br />
         <div class="center-form">
