--- a/prightside.html
+++ b/prightside.html
@@ -136,12 +136,12 @@
         <hr class="bg-danger" style="width: 60%;" />
         <h4 class="text-white">Enter the triangle's hypotenuse</h4>
         <div class="center-form">
-            <input type="number" id="hypo" placeholder="hypotenuse" name="side" class="form-control mb-0" value="1" step="0.01" min="0" />
+            <input type="number" id="hypo" placeholder="hypotenuse" name="side" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br />
         <h4 class="text-white">Enter one of the right triangle's leg</h4>
         <div class="center-form">
-            <input type="number" id="side" placeholder="leg" name="side" class="form-control mb-0" value="1" step="0.01" min="0" />
+            <input type="number" id="side" placeholder="leg" name="side" class="form-control mb-0" step="0.01" min="0" />
         </div>
         <br />
         <div class="center-form">
