--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="formulas.html"><i class="bi bi-book"></i> Formulas</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="equations.html"><i class="bi bi-x"></i> Equations</a>
+                </li>
             </ul>
         </div>
     </nav>
