--- a/equations.html
+++ b/equations.html
@@ -136,11 +136,11 @@
         </div>
     </nav>
     <!-- NAVBAR END -->
-    <!-- X + Y = Z START -->
     <div class="center">
         <h1 class="text-white title">Liquid Equations</h1>
         <hr class="bg-danger" style="width: 60%;" />
-        <h4 class="text-white">x + y = z</h4>
+        <!-- X + Y = Z START -->
+        <h4 class="text-white">X + Y = Z</h4>
         <div class="center-form">
             <input type="number" id="y" placeholder="y" class="form-control mb-0" step="0.01" />
         </div>
@@ -153,13 +153,11 @@
             <button class="btn btn-primary btn-lg" id="button">Solve for x</button>
         </div>
         <br />
-        <p class="text-success " id="output"></p>
-    </div>
-    <!-- X + Y = Z END -->
-    <!-- X - Y = Z START -->
-    <div class="center">
-        <hr class="bg-danger" style="width: 60%;" />
-        <h4 class="text-white">x - y = z</h4>
+        <p class="text-success">Result: <span id="output"></span></p>
+        <!-- X + Y = Z END -->
+        <!-- X - Y = Z START -->
+        <hr class="bg-danger" style="width: 50%;" />
+        <h4 class="text-white">X - Y = Z</h4>
         <div class="center-form">
             <input type="number" id="y2" placeholder="y" class="form-control mb-0" step="0.01" />
         </div>
@@ -172,13 +170,11 @@
             <button class="btn btn-primary btn-lg" id="button2">Solve for x</button>
         </div>
         <br />
-        <p class="text-success " id="output2"></p>
-    </div>
-    <!-- X - Y = Z END -->
-    <!-- YX = Z START -->
-    <div class="center">
-        <hr class="bg-danger" style="width: 60%;" />
-        <h4 class="text-white">y*z = z</h4>
+        <p class="text-success">Result: <span id="output2"></span></p>
+        <!-- X - Y = Z END -->
+        <!-- YX = Z START -->
+        <hr class="bg-danger" style="width: 50%;" />
+        <h4 class="text-white">YX = Z</h4>
         <div class="center-form">
             <input type="number" id="y3" placeholder="y" class="form-control mb-0" step="0.01" />
         </div>
@@ -191,9 +187,9 @@
             <button class="btn btn-primary btn-lg" id="button3">Solve for x</button>
         </div>
         <br />
-        <p class="text-success " id="output3"></p>
+        <p class="text-success">Result: <span id="output3"></span></p>
+        <!-- YX = Z END -->
     </div>
-    <!-- YX = Z END -->
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
     <script src="Scripts/bootstrap.js"></script>
