--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a href="" class="dropdown-item"><div class="g-signin2" data-onsuccess="onSignIn"></div></a>
-                        <a href="" class="dropdown-item"><i class="bi bi-person-circle"></i> <span id="display">Not Signed In</span> <img src="Assets/profile.jpg" id="user-image" style="border-radius: 50%; height: 1em; width: auto;"></a>
+                        <a href="" class="dropdown-item"><span id="profile-photo"><i class="bi bi-person-circle"></i></span> <span id="display">Not Signed In</span></a>
                         <a href="" class="dropdown-item" onclick="signOut();" id="signout"><i class="bi bi-door-closed"></i> Sign out</a>
                         <a href="tos.html" class="dropdown-item"><i class="bi bi-card-checklist"></i> Terms of Use</a>
                     </div>
