--- a/contact.html
+++ b/contact.html
@@ -53,10 +53,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="index.html"><i class="bi bi-house"></i> Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown active">
                     <a href="" class="nav-link" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Contact
                         <i class="bi bi-caret-down-fill"></i>
@@ -149,7 +149,7 @@
                 </div>
                 <br>
                 <div class="center-form">
-                    <input type="submit" name="send" value="Send" class="btn btn-success"/>
+                    <input type="submit" name="send" value="Send" class="btn btn-success send-mail"/>
                 </div>
              </form>
     </div>
