--- a/asquare.html
+++ b/asquare.html
@@ -146,7 +146,9 @@
             <button class="btn btn-primary btn-lg" id="button">Calculate</button>
         </div>
         <br />
-        <p class="text-success " id="output"></p>
+        <div style="max-height: 1em;">
+            <p class="text-success" id="output"></p>
+        </div>
         <br />
         <div class="formula">
             <b class="text-white show-formula"><u>show formula</u></b>
