--- a/equations.html
+++ b/equations.html
@@ -153,7 +153,10 @@
             <button class="btn btn-primary btn-lg" id="button">Solve for x</button>
         </div>
         <br />
-        <p class="text-success">Result: <span id="output"></span></p>
+        <div style="max-height: 1em;">
+            <p class="text-success" id="output"></p>
+        </div>
+        <br>
         <!-- X + Y = Z END -->
         <!-- X - Y = Z START -->
         <hr class="bg-danger" style="width: 50%;" />
@@ -170,7 +173,10 @@
             <button class="btn btn-primary btn-lg" id="button2">Solve for x</button>
         </div>
         <br />
-        <p class="text-success">Result: <span id="output2"></span></p>
+        <div style="max-height: 1em;">
+            <p class="text-success" id="output2"></p>
+        </div>
+        <br>
         <!-- X - Y = Z END -->
         <!-- YX = Z START -->
         <hr class="bg-danger" style="width: 50%;" />
@@ -187,7 +193,10 @@
             <button class="btn btn-primary btn-lg" id="button3">Solve for x</button>
         </div>
         <br />
-        <p class="text-success">Result: <span id="output3"></span></p>
+        <div style="max-height: 1em;">
+            <p class="text-success" id="output3"></p>
+        </div>
+        <br>
         <!-- YX = Z END -->
     </div>
     <!-- SCRIPTS START -->
