--- a/acircle.html
+++ b/acircle.html
@@ -145,9 +145,11 @@
         <div class="center-form">
             <button class="btn btn-primary btn-lg" id="button">Calculate</button>
         </div>
-        <br />
-        <p class="text-success " id="output"></p>
-        <br />
+        <br>
+        <div style="max-height: 1em;">
+            <p class="text-success" id="output"></p>
+        </div>
+        <br>
         <div class="formula">
             <b class="text-white show-formula"><u>show formula</u></b>
             <p id="formula" class="text-white">
