--- a/phypotenuse.html
+++ b/phypotenuse.html
@@ -151,7 +151,9 @@
             <button class="btn btn-primary btn-lg" id="button">Calculate</button>
         </div>
         <br />
-        <p class="text-success " id="output"></p>
+        <div style="max-height: 1em;">
+            <p class="text-success" id="output"></p>
+        </div>
         <br />
         <div>
             <b class="text-white show-formula"><u>show formula</u></b>
