added HTML symbol codes

--- a/acircle.html
+++ b/acircle.html
@@ -153,7 +153,7 @@
         <div class="formula">
             <b class="text-white show-formula"><u>show formula</u></b>
             <p id="formula" class="text-white">
-                put the circle's radius in the power of 2 and then multiply it with π(~3.14)
+                put the circle's radius in the power of 2 and then multiply it with &#8719;(&#8764;3.14)
             </p>
         </div>
     </div>
