--- a/equations.html
+++ b/equations.html
@@ -140,7 +140,7 @@
         <h1 class="text-white title">Liquid Equations</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <!-- X + Y = Z START -->
-        <h4 class="text-white">X + Y = Z</h4>
+        <h4 class="text-white">X &#43; Y &#61; Z</h4>
         <div class="center-form">
             <input type="number" id="y" placeholder="y" class="form-control mb-0" step="0.01" />
         </div>
@@ -160,7 +160,7 @@
         <!-- X + Y = Z END -->
         <!-- X - Y = Z START -->
         <hr class="bg-danger" style="width: 50%;" />
-        <h4 class="text-white">X - Y = Z</h4>
+        <h4 class="text-white">X &#8722; Y &#61; Z</h4>
         <div class="center-form">
             <input type="number" id="y2" placeholder="y" class="form-control mb-0" step="0.01" />
         </div>
@@ -180,7 +180,7 @@
         <!-- X - Y = Z END -->
         <!-- YX = Z START -->
         <hr class="bg-danger" style="width: 50%;" />
-        <h4 class="text-white">YX = Z</h4>
+        <h4 class="text-white">Y &#8727; X &#61; Z</h4>
         <div class="center-form">
             <input type="number" id="y3" placeholder="y" class="form-control mb-0" step="0.01" />
         </div>
