--- a/formulas.html
+++ b/formulas.html
@@ -136,10 +136,11 @@
     <!-- NAVBAR END -->
     <div class="center table-margin">
         <h1 class="text-white title">Liquid Formulas</h1>
+        <hr class="bg-danger" style="width: 70%;" />
         <section id="trigonometry">
         <h3 class="text-white">Τrigonometric Νumbers</h3>
         <table class="table table-bordered text-white formulas">
-            <thead class="bg-success">
+            <thead class="bg-primary head">
                 <tr>
                     <th>Angle</th>
                     <th>Sin</th>
@@ -147,35 +148,35 @@
                     <th>Tan</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="formulas-body">
                 <tr>
-                    <td>30</td>
-                    <td>1/2</td>
-                    <td>sqrt(3)/2</td>
-                    <td>sqrt(3)/3</td>
+                    <td>30&#176;</td>
+                    <td><sup>1</sup>&frasl;<sub>2</sub></td>
+                    <td>&#8730;3 &#247; 2</td>
+                    <td>&#8730;3 &#247; 3</td>
                 </tr>
                 <tr>
-                    <td>45</td>
-                    <td>sqrt(2)/2</td>
-                    <td>sqrt(2)/2</td>
+                    <td>45&#176;</td>
+                    <td>&#8730;2 &#247; 2</td>
+                    <td>&#8730;2 &#247; 2</td>
                     <td>1</td>
                 </tr>
                 <tr>
-                    <td>60</td>
-                    <td>sqrt(3)/2</td>
-                    <td>1/2</td>
-                    <td>sqrt(3)</td>
+                    <td>60&#176;</td>
+                    <td>&#8730;3 &#247; 2</td>
+                    <td><sup>1</sup>&frasl;<sub>2</sub></td>
+                    <td>&#8730;3</td>
                 </tr>
                 <tr>
-                    <td>90</td>
+                    <td>90&#176;</td>
                     <td>1</td>
                     <td>0</td>
-                    <td>n/a</td>
+                    <td>-</td>
                 </tr>
             </tbody>
         </table>
         </section>
-        <h4 class="text-primary">more coming soon</h4>
+        <p class="text-white">more coming soon!</p>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
