--- a/phypotenuse.html
+++ b/phypotenuse.html
@@ -158,7 +158,7 @@
         <div>
             <b class="text-white show-formula"><u>show formula</u></b>
             <p id="formula" class="text-white">
-                hypotenuse^2 = (first leg)^2 + (other leg)^2
+                hypotenuse&#178; &#61; (first leg)&#178; &#43; (other leg)&#178;
             </p>
         </div>
     </div>
