--- a/prightside.html
+++ b/prightside.html
@@ -158,7 +158,7 @@
         <div>
             <b class="text-white show-formula"><u>show formula</u></b>
             <p id="formula" class="text-white">
-                (first leg)^2 = hypotenuse^2 - (other leg)^2
+                (first leg)&#178; &#61; hypotenuse&#178; &#8722; (other leg)&#178;
             </p>
         </div>
     </div>
