--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                     Suggest an Idea
                 </button>
             </form>
+            <h3 class="text-primary">featured</h3>
             <form action="https://www.binance.com/en/trade/DOGE_USDT" target="_blank">
                 <button class="btn btn-info homebutton">
                     <i class="bi bi-cash-stack"></i>
