--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@
                     Suggest an Idea
                 </button>
             </form>
-            <h3 class="text-primary">featured</h3>
+            </div>
+            <h4 class="text-white">featured</h4>
             <form action="https://www.binance.com/en/trade/DOGE_USDT" target="_blank">
                 <button class="btn btn-info homebutton">
                     <i class="bi bi-cash-stack"></i>
                     Buy DogeCoin
                 </button>
             </form>
-        </div>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
