--- a/index.html
+++ b/index.html
@@ -159,13 +159,21 @@
                 </button>
             </form>
             </div>
-            <h4 class="text-white">featured</h4>
+            <h5 class="text-white">featured</h5>
+            <div class="inline-flex">
             <form action="https://www.binance.com/en/trade/DOGE_USDT" target="_blank">
                 <button class="btn btn-info homebutton">
                     <i class="bi bi-cash-stack"></i>
                     Buy DogeCoin
                 </button>
             </form>
+            <form action="https://www.binance.com/en/trade/DOGE_USDT" target="_blank">
+                <button class="btn btn-info homebutton">
+                    <i class="bi bi-cash-stack"></i>
+                    Buy DogeCoin
+                </button>
+            </form>
+        </div>
     </div>
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
