--- a/formulas.html
+++ b/formulas.html
@@ -139,7 +139,7 @@
         <hr class="bg-danger" style="width: 70%;" />
         <section id="trigonometry">
         <h3 class="text-white">Τrigonometric Νumbers</h3>
-        <table class="table table-bordered text-white formulas">
+        <table class="table table-bordered text-white formulas-table">
             <thead class="bg-primary head">
                 <tr>
                     <th>Angle</th>
