--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 </button>
             </form>
             </div>
-            <h5 class="text-white featured">featured</h5>
+            <h5 class="text-white home-featured">featured</h5>
             <form action="https://www.binance.com/en/trade/DOGE_USDT" target="_blank">
                 <button class="btn btn-info homebutton">
                     <i class="bi bi-cash-stack"></i>
