--- a/clenght.html
+++ b/clenght.html
@@ -141,27 +141,27 @@
         <div class="center-form">
             <input id="inputFeet" class="form-control mb-0" type="number" placeholder="Feet" oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white">Meters</h4>
+        <h4 class="text-white unit-label">Meters</h4>
         <div class="center-form">
             <input id="inputMeters" class="form-control mb-0" type="number" placeholder="Meters" oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white">Inches</h4>
+        <h4 class="text-white unit-label">Inches</h4>
         <div class="center-form">
             <input id="inputInches" class="form-control mb-0" type="number" placeholder="Inches" oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white">cm</h4>
+        <h4 class="text-white unit-label">cm</h4>
         <div class="center-form">
             <input id="inputcm" class="form-control mb-0" type="number" placeholder="cm" oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white">Yards</h4>
+        <h4 class="text-white unit-label">Yards</h4>
         <div class="center-form">
             <input id="inputYards" class="form-control mb-0" type="number" placeholder="Yards" oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white">Kilometers</h4>
+        <h4 class="text-white unit-label">Kilometers</h4>
         <div class="center-form">
             <input id="inputKilometers" class="form-control mb-0" type="number" placeholder="Kilometers" oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white">Miles</h4>
+        <h4 class="text-white unit-label">Miles</h4>
         <div class="center-form">
             <input id="inputMiles" class="form-control mb-0" type="number" placeholder="Miles" oninput="lengthConverter(this.id,this.value)" onchange="lengthConverter(this.id,this.value)">
         </div>
