--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <div class="dead-center">
         <h1 class="text-white title">Liquid Geometry</h1>
         <h3 class="text-danger">the go-to site for geometry and algebra</h3>
-        <div class="inline-flex">
+        <div class="d-inline-flex">
             <form action="https://github.com/liquid-geometry" target="_blank">
                 <button class="btn btn-dark homebutton">
                     <i class="bi bi-github"></i>
@@ -165,6 +165,7 @@
                     <i class="bi bi-cash-stack"></i>
                     Buy DogeCoin
                 </button>
+                <p class=""></p>
             </form>
     </div>
     <!-- SCRIPTS START -->
