--- a/cspeed.html
+++ b/cspeed.html
@@ -137,19 +137,19 @@
     <div class="center unit-con">
         <h1 class="text-white title">Speed Converter</h1>
         <hr class="bg-danger" style="width: 60%;" />
-        <h4 class="text-white">MPH</h4>
+        <h4 class="text-white unit-label">MPH</h4>
         <div class="center-form">
             <input id="inputMPH" class="form-control mb-0" type="number" placeholder="MPH" oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white">KPH</h4>
+        <h4 class="text-white unit-label">KPH</h4>
         <div class="center-form">
             <input id="inputKPH" class="form-control mb-0" type="number" placeholder="KPH" oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white">Knots</h4>
+        <h4 class="text-white unit-label">Knots</h4>
         <div class="center-form">
             <input id="inputKnots" class="form-control mb-0" type="number" placeholder="Knots" oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white">Mach</h4>
+        <h4 class="text-white unit-label">Mach</h4>
         <div class="center-form">
             <input id="inputMach" class="form-control mb-0" type="number" placeholder="Mach" oninput="speedConverter(this.id,this.value)" onchange="speedConverter(this.id,this.value)">
         </div>
