--- a/ctemp.html
+++ b/ctemp.html
@@ -137,15 +137,15 @@
     <div class="center unit-con">
         <h1 class="text-white title">Temperature Converter</h1>
         <hr class="bg-danger" style="width: 60%;" />
-        <h4 class="text-white">Fahrenheit</h4>
+        <h4 class="text-white unit-label">Fahrenheit</h4>
         <div class="center-form">
             <input id="inputFahrenheit" class="form-control mb-0" type="number" min="-459.66999999999996" placeholder="Fahrenheit" oninput="temperatureConverter(this.id,this.value)" onchange="temperatureConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white">Celcius</h4>
+        <h4 class="text-white unit-label">Celcius</h4>
         <div class="center-form">
             <input id="inputCelsius" class="form-control mb-0" type="number" min="-273.15" placeholder="Celsius" oninput="temperatureConverter(this.id,this.value)" onchange="temperatureConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white">Kelvin</h4>
+        <h4 class="text-white unit-label">Kelvin</h4>
         <div class="center-form">
             <input id="inputKelvin" class="form-control mb-0" type="number" min="0" placeholder="Kelvin" oninput="temperatureConverter(this.id,this.value)" onchange="temperatureConverter(this.id,this.value)">
         </div>
