--- a/cweight.html
+++ b/cweight.html
@@ -141,19 +141,19 @@
         <div class="center-form">
             <input id="inputPounds" class="form-control mb-0" type="number" placeholder="Pounds" oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white">Kilograms</h4>
+        <h4 class="text-white unit-label">Kilograms</h4>
         <div class="center-form">
             <input id="inputKilograms" class="form-control mb-0" type="number" placeholder="Kilograms" oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white">Ounces</h4>
+        <h4 class="text-white unit-label">Ounces</h4>
         <div class="center-form">
             <input id="inputOunces" class="form-control mb-0" type="number" placeholder="Ounces" oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white">Grams</h4>
+        <h4 class="text-white unit-label">Grams</h4>
         <div class="center-form">
             <input id="inputGrams" class="form-control mb-0" type="number" placeholder="Grams" oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)">
         </div>
-        <h4 class="text-white">Stones</h4>
+        <h4 class="text-white unit-label">Stones</h4>
         <div class="center-form">
             <input id="inputStones" class="form-control mb-0" type="number" placeholder="Stones" oninput="weightConverter(this.id,this.value)" onchange="weightConverter(this.id,this.value)">
         </div>
