--- a/equations.html
+++ b/equations.html
@@ -142,11 +142,11 @@
         <!-- X + Y = Z START -->
         <h4 class="text-white">X &#43; Y &#61; Z</h4>
         <div class="center-form">
-            <input type="number" id="y" placeholder="y" class="form-control mb-0" step="0.01" />
+            <input type="number" id="y" placeholder="Y" class="form-control mb-0" step="0.01" />
         </div>
         <br>
         <div class="center-form">
-            <input type="number" id="z" placeholder="z" class="form-control mb-0" step="0.01" />
+            <input type="number" id="z" placeholder="Z" class="form-control mb-0" step="0.01" />
         </div>
         <br>
         <div class="center-form">
@@ -162,11 +162,11 @@
         <hr class="bg-danger" style="width: 50%;" />
         <h4 class="text-white">X &#8722; Y &#61; Z</h4>
         <div class="center-form">
-            <input type="number" id="y2" placeholder="y" class="form-control mb-0" step="0.01" />
+            <input type="number" id="y2" placeholder="Y" class="form-control mb-0" step="0.01" />
         </div>
         <br>
         <div class="center-form">
-            <input type="number" id="z2" placeholder="z" class="form-control mb-0" step="0.01" />
+            <input type="number" id="z2" placeholder="Z" class="form-control mb-0" step="0.01" />
         </div>
         <br>
         <div class="center-form">
@@ -182,11 +182,11 @@
         <hr class="bg-danger" style="width: 50%;" />
         <h4 class="text-white">Y &#8727; X &#61; Z</h4>
         <div class="center-form">
-            <input type="number" id="y3" placeholder="y" class="form-control mb-0" step="0.01" />
+            <input type="number" id="y3" placeholder="Y" class="form-control mb-0" step="0.01" />
         </div>
         <br>
         <div class="center-form">
-            <input type="number" id="z3" placeholder="z" class="form-control mb-0" step="0.01" />
+            <input type="number" id="z3" placeholder="Z" class="form-control mb-0" step="0.01" />
         </div>
         <br>
         <div class="center-form">
