--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <link rel="icon" type="image/png" href="Assets/logo.png">
     <!-- SCRIPTS -->
     <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <!-- POPPER.JS ONLY FOR TOOLPITS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <!-- GOOGLE ANALYTICS -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7W2S8VV31F"></script>
     <script>
@@ -159,13 +161,11 @@
                 </button>
             </form>
             </div>
-            <h5 class="text-white home-featured">featured</h5>
-            <form action="https://www.binance.com/en/trade/DOGE_USDT" target="_blank">
-                <button class="btn btn-info homebutton">
+            <form action="https://www.lqgm.cf/doge" target="_blank">
+                <button class="btn btn-info homebutton" id="lol"  data-toggle="tooltip" data-placement="bottom" title="Sponsored">
                     <i class="bi bi-cash-stack"></i>
                     Buy DogeCoin
                 </button>
-                <p class=""></p>
             </form>
     </div>
     <!-- SCRIPTS START -->
@@ -175,6 +175,11 @@
     <script src="OAuth/SignOut.js"></script>
     <script src="OAuth/OnSignOut.js"></script>
     <script src="js/release.js"></script>
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
 </body>
