--- a/404.html
+++ b/404.html
@@ -73,7 +73,7 @@
                         <a href="mailto:liquid-geometry@dkatsios.tk" target="_blank" class="dropdown-item"><i class="bi bi-envelope-fill"></i> Email</a>
                         <a href="https://discord.com/invite/VwvQNYzU5M" target="_blank" class="dropdown-item"><i class="bi bi-discord"></i> Discord</a>
                         <a href="https://twitter.com/damik_raw" target="_blank" class="dropdown-item"><i class="bi bi-twitter"></i> Twitter</a>
-                        <a href="#" class="dropdown-item" title="coming soon"><i class="bi bi-instagram"></i> Instagram</a>
+                        <a href="https://www.instagram.com/liquid_geometry/" class="dropdown-item"><i class="bi bi-instagram"></i> Instagram</a>
                         <a href="https://api.liquidgeometry.tk" target="_blank" class="dropdown-item"><i class="bi bi-hdd-stack-fill"></i> REST API</a>
                         <a href="https://developers.liquidgeometry.tk" target="_blank" class="dropdown-item"><i class="bi bi-code-slash"></i> For Developers</a>
                         <a href="https://github.com/liquid-geometry/liquidgeometry" target="_blank" class="dropdown-item"><i class="bi bi-terminal-fill"></i> Clone the Repo</a>
@@ -150,11 +150,17 @@
             <h2 class="text-white error">Error 404</h2>
         </div>
         <h4 class="text-white">it seems that the page <i id="url"></i> does not exist on this server...</h4>
-        <div class="inline-flex">
+        <div class="d-inline-flex">
             <form action="index.html">
                 <button class="btn btn-primary homebutton">
                     <i class="bi bi-house"></i>
                     Go to the Home Page
+                </button>
+            </form>
+            <form action="https://github.com/liquid-geometry/liquidgeometry/issues" target="_blank">
+                <button class="btn btn-warning homebutton">
+                    <i class="bi bi-bug-fill"></i>
+                    Report a Bug
                 </button>
             </form>
         </div>
