--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                         <a href="mailto:liquid-geometry@dkatsios.tk" target="_blank" class="dropdown-item"><i class="bi bi-envelope-fill"></i> Email</a>
                         <a href="https://discord.com/invite/VwvQNYzU5M" target="_blank" class="dropdown-item"><i class="bi bi-discord"></i> Discord</a>
                         <a href="https://twitter.com/damik_raw" target="_blank" class="dropdown-item"><i class="bi bi-twitter"></i> Twitter</a>
-                        <a href="#" class="dropdown-item" title="coming soon"><i class="bi bi-instagram"></i> Instagram</a>
+                        <a href="https://www.instagram.com/liquid_geometry/" class="dropdown-item"><i class="bi bi-instagram"></i> Instagram</a>
                         <a href="https://api.liquidgeometry.tk" target="_blank" class="dropdown-item"><i class="bi bi-hdd-stack-fill"></i> REST API</a>
                         <a href="https://developers.liquidgeometry.tk" target="_blank" class="dropdown-item"><i class="bi bi-code-slash"></i> For Developers</a>
                         <a href="https://github.com/liquid-geometry/liquidgeometry" target="_blank" class="dropdown-item"><i class="bi bi-terminal-fill"></i> Clone the Repo</a>
