--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
     <!-- NAVBAR START -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Liquid Geometry <span class="badge badge-success" style="font-size: small; font-weight: 300;" id="latest"></span></a> <!-- leave this as it is -->
+        <a class="navbar-brand" href="#">Liquid Geometry</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -139,7 +139,7 @@
     </nav>
     <!-- NAVBAR END -->
     <div class="dead-center">
-        <h1 class="text-white title">Liquid Geometry</h1>
+        <h1 class="text-white title">Liquid Geometry</span></h1>
         <h3 class="text-danger">the go-to site for geometry and algebra</h3>
         <div class="d-inline-flex">
             <form action="https://github.com/liquid-geometry" target="_blank">
