--- a/tos.html
+++ b/tos.html
@@ -205,6 +205,10 @@
             Sarantis Moutsatsos<br />
             saradis.m06@gmail.com
         </p>
+        <p>
+            Corporation<br />
+            liquid-geometry@dkatsios.tk
+        </p>
         </section>
     </div>
     <!-- TOS END -->
