--- a/tos.html
+++ b/tos.html
@@ -212,6 +212,16 @@
         </section>
     </div>
     <!-- TOS END -->
+
+<div class="container">
+    <ul class="bd-footer-links">
+    <li><a href="https://github.com/twbs">GitHub</a></li>
+    <li><a href="https://twitter.com/getbootstrap">Twitter</a></li>
+    <li><a href="https://getbootstrap.com/docs/5.0/about/overview/">About</a></li>
+    </ul>
+    <p>Currently <a href="https://github.com/twbs/icons/releases/tag/v1.4.1">v1.4.1</a>. Icons and documentation licensed <a href="https://github.com/twbs/icons/blob/main/LICENSE.md" target="_blank" rel="license noopener">MIT</a>.</p>
+    </div>
+    
     <!-- SCRIPTS START -->
     <script src="Scripts/jquery-3.0.0.js"></script>
     <script src="Scripts/bootstrap.js"></script>
